# MG_Coordinator

./: CMakeLists.txt  main.cpp
Protocol/: MarxPacket.h
Sources/: DataBaseWorker.cpp  DataBaseWorker.h  GameCoordinator.cpp  GameCoordinator.h  Lobby.h  MarxProtocol.cpp  MarxProtocol.h  Server.cpp  Server.h  ServerClient.cpp  ServerClient.h  Streams.cpp  Streams.h
TestClient/: Client.h  Stream.cpp  Stream.h  main.cpp
